Update titles and labels for clarity and consistency
Revised the page and heading titles to specify '4th Infantry Brigade Milsim – Triage & Logistics Tool'. Updated input placeholders and button labels to use English and improve clarity. Removed unused buttons for a cleaner interface.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Milsim – Triage & Logistics (solo)</title>
+  <title>4th Infantry Brigade Milsim – Triage & Logistics Tool</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="wrap">
-    <h1>Milsim – Triage & Logistics (solo)</h1>
+    <h1>4th Infantry Brigade Milsim – Triage & Logistics Tool</h1>
 
     <div class="card grid">
       <!-- TRIAGE COUNTER -->
@@ -67,11 +67,11 @@
         <div class="row">
           <div>
             <label for="logItem">Item</label>
-            <input id="logItem" placeholder="f.eks. Plasma IV, Bandages, Smoke x2" />
+            <input id="logItem" placeholder="i.e Plasma IV, Bandages, Smoke x2" />
           </div>
           <div>
             <label for="logQty">Amount</label>
-            <input id="logQty" type="number" min="1" inputmode="numeric" placeholder="f.eks. 6" />
+            <input id="logQty" type="number" min="1" inputmode="numeric" placeholder="i.e 6" />
           </div>
         </div>
         <div class="bar" style="margin-top:6px">
@@ -93,9 +93,7 @@
       </div>
 
       <div class="bar">
-        <button id="saveNight" class="btn primary">Save Night</button>
-        <button id="newNight" class="btn ghost">New Night</button>
-        <button id="copy" class="btn primary">Kopier PR-Markdown</button>
+        <button id="copy" class="btn primary">Copy PR-Markdown</button>
         <button id="reset" class="btn ghost">Reset sheet</button>
       </div>
 
