Update UI text to English and fix typo
Changed several UI labels and messages in script.js from Norwegian to English for consistency, including button texts and alert messages. Also fixed a typo in the notes placeholder in index.html.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <div>
         <label for="notes">Notes</label>
-        <textarea id="notes" placeholder="Notepad to have to defrief"></textarea>
+        <textarea id="notes" placeholder="Notepad to have to debrief"></textarea>
       </div>
 
       <div class="bar">
